[package]
name = "hekk"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.40"
iced = { version = "0.3.0", features = [ "tokio" ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "3dfce43396af457aaee835dbe281663a41a261ab", default-features = false, features = [ "tabs" ] }
iphlpapi = { git = "https://github.com/adumbidiot/iphlpapi-rs", rev = "8595667546ef2e626c7a4057796d1f7d40f3b469" }
netcon = { path = "lib/netcon-rs" }
skylight = { git = "https://github.com/adumbidiot/skylight-rs", rev = "5b25edce0186ef9fba0dbd0f7008083a20c896b9", features = [ "objbase" ] }
winapi = "0.3.9"
winreg = "0.9.0"

# Force use of wgpu that has needed fixes on master
wgpu = "=0.8.0"

[build-dependencies]
winres = "0.1.11"

[patch.crates-io]
# Get latest wgpu
iced = { git = "https://github.com/hecrj/iced", rev = "e292821c3780fc5a57c835815efc7a232ce4dc32" }
iced_futures = { git = "https://github.com/hecrj/iced", rev = "e292821c3780fc5a57c835815efc7a232ce4dc32" }
iced_native = { git = "https://github.com/hecrj/iced", rev = "e292821c3780fc5a57c835815efc7a232ce4dc32" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "e292821c3780fc5a57c835815efc7a232ce4dc32" }
iced_style = { git = "https://github.com/hecrj/iced", rev = "e292821c3780fc5a57c835815efc7a232ce4dc32" }

# Fix segfault on panic
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" , rev = "3634abb0d560a2906d20c74efee9c2f16afb2503" }

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [
    "lib/netcon-sys",
    "lib/netcon-rs",
]
