[package]
name = "hekk"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.41"
bitflags = "1.2.1"
crossbeam-channel = "0.5.1"
iced = { version = "0.3.0", features = [ "tokio" ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "3dfce43396af457aaee835dbe281663a41a261ab", default-features = false, features = [ "tabs" ] }
iphlpapi = { git = "https://github.com/adumbidiot/iphlpapi-rs", rev = "8595667546ef2e626c7a4057796d1f7d40f3b469" }
log = "0.4.14"
netcon = { path = "lib/netcon-rs" }
once_cell = "1.8.0"
skylight = { git = "https://github.com/adumbidiot/skylight-rs", rev = "5b25edce0186ef9fba0dbd0f7008083a20c896b9", features = [ "objbase" ] }
tokio = { version = "1.8.0", features = [ "sync" ] }
uuid = { version = "0.8.2", features = [ "guid" ] }
winapi = "0.3.9"
winreg = "0.9.0"

[build-dependencies]
winres = "0.1.11"

[patch.crates-io]
# Get wgpu 0.9.x + update winit
iced = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_futures = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_native = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_style = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [
    "lib/netcon-sys",
    "lib/netcon-rs",
]
